2024-09-30T01:47:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11097927254 # 434
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-30
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 201 232 / 204 235
* notice: next accum: outdated-unq outdated-all / unq all: 202 233 / 204 235
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-15] / []

2024-09-29T01:50:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11088713014 # 433
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 200 231 / 204 235
* notice: next accum: outdated-unq outdated-all / unq all: 201 232 / 204 235
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-14] / []

2024-09-28T01:42:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11080026312 # 432
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-28
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 200 231 / 203 234
* notice: next accum: outdated-unq outdated-all / unq all: 200 231 / 204 235
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-27]

2024-09-19T01:41:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932928056 # 423