@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-30T01:47:07Z",
-  "count_outdated" : 233,
-  "uniques_outdated" : 202,
+  "timestamp" : "2024-10-03T01:43:51Z",
+  "count_outdated" : 234,
+  "uniques_outdated" : 203,
   "count" : 235,
   "uniques" : 204,
   "clones" : [
-    {
-      "timestamp": "2024-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-27T00:00:00Z",
       "count": 1,
